--- a/GeneradorIconosAppAndroidIPhone/GeneradorIconosApp/template/Info.plist
+++ b/GeneradorIconosAppAndroidIPhone/GeneradorIconosApp/template/Info.plist
@@ -21,9 +21,9 @@
 	<key>MinimumOSVersion</key>
 	<string>9.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>MovilParking Desarrollo Ciudadano</string>
+	<string>Proyecto Ambiente Usuario</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.MOVPARKDesarrollo.Ciudadano</string>
+	<string>com.PROYECTOAmbiente.Usuario</string>
 	<key>CFBundleVersion</key>
 	<string>6.0</string>
 	<key>UILaunchStoryboardName</key>
